# src/controllers/console.controller.ts
@@ -2,6 +2,7 @@ import { Controller, Get, Post, Delete, Route, Path, Body, Tags, Patch } from "t
 import { consoleService } from "../services/console.service";
 import { ConsoleDTO } from "../dto/console.dto";
 import {notFound} from "../error/NotFoundError";
+import {GameDTO} from "../dto/game.dto";
 
 @Route("consoles")
 @Tags("Consoles")
@@ -41,5 +42,10 @@ export class ConsoleController extends Controller {
   ): Promise<ConsoleDTO | null> {
     const { name, manufacturer } = requestBody;
     return consoleService.updateConsole(id, name, manufacturer);
+  }
+
+  @Get("{id}/games")
+  public async getGamesByConsoleId(@Path() id: number): Promise<GameDTO[]> {
+    return consoleService.getGamesByConsoleId(id);
   }
 }
